--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xrdp (0.7.0-1.15) ingunstable; urgency=medium
+
+  * Add patch for large screens.
+
+ -- Warmerdam, B. (Bart) <Bart.Warmerdam@mail.ing.nl>  Mon, 13 Jul 2015 07:17:45 +0200
+
 xrdp (0.7.0-1.14) ingunstable; urgency=medium
 
   * Add support w3 window manager for session cleanup.
